--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         </a>
 
         <nav class="hidden md:flex gap-6 text-sm font-medium text-gray-600 dark:text-gray-300">
-            <a href="rotas.html" class="hover:text-laranja-600 transition font-bold">Rotas</a>
-            <a href="agencias.html" class="hover:text-laranja-600 transition font-bold">Agências</a>
-            <a href="sobre.html" class="hover:text-laranja-600 transition font-bold">Sobre</a>
+            <a href="/paginas/rotas.html" class="hover:text-laranja-600 transition font-bold">Rotas</a>
+            <a href="/paginas/agencias.html" class="hover:text-laranja-600 transition font-bold">Agências</a>
+            <a href="/paginas/sobre.html" class="hover:text-laranja-600 transition font-bold">Sobre</a>
         </nav>
 
         <div class="hidden md:flex items-center gap-3">
@@ -93,7 +93,7 @@
     <section class="pt-28 pb-12 px-4 relative">
         <div class="max-w-7xl mx-auto relative z-10 text-center md:text-left md:flex md:items-center md:justify-between gap-8">
             <div class="max-w-2xl">
-                <span class="inline-block py-1 px-3 rounded-full bg-laranja-100 text-laranja-700 text-xs font-bold tracking-wider mb-4 border border-laranja-200 uppercase">
+                <span class="inline-block py-1 px-3 rounded-full bg-laranja-0 text-laranja-700 text-xs font-bold tracking-wider mb-4 border border-laranja-200 uppercase">
                     Roteiros Gastronômicos & Turismo
                 </span>
                 <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold text-gray-900 dark:text-white mb-6 leading-tight">
@@ -275,19 +275,19 @@
             Professor: Edlange Lopes da Silva
         </p>
 
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-8 mb-10">
+        <div class="grid grid-cols-2 md:grid-cols-3 gap-8 mb-10">
             <div>
                 <p class="font-semibold mb-2">Israel</p>
                 <div class="flex justify-center gap-4 text-sm">
-                    <a href="https://github.com/SEU_GITHUB" target="_blank" class="hover:text-laranja-500 transition">GitHub</a>
-                    <a href="https://linkedin.com/in/SEU_LINKEDIN" target="_blank" class="hover:text-laranja-500 transition">LinkedIn</a>
+                    <a href="https://github.com/TioRael" target="_blank" class="hover:text-laranja-500 transition">GitHub</a>
+                    <a href="https://linkedin.com/in/israel-menezes-perfil" target="_blank" class="hover:text-laranja-500 transition">LinkedIn</a>
                 </div>
             </div>
 
             <div>
                 <p class="font-semibold mb-2">Allan</p>
                 <div class="flex justify-center gap-4 text-sm">
-                    <a href="https://github.com/SEU_GITHUB" target="_blank" class="hover:text-laranja-500 transition">GitHub</a>
+                    <a href="https://github.com/allnmaxmo" target="_blank" class="hover:text-laranja-500 transition">GitHub</a>
                     <a href="https://linkedin.com/in/SEU_LINKEDIN" target="_blank" class="hover:text-laranja-500 transition">LinkedIn</a>
                 </div>
             </div>
@@ -295,15 +295,7 @@
             <div>
                 <p class="font-semibold mb-2">Andrey</p>
                 <div class="flex justify-center gap-4 text-sm">
-                    <a href="https://github.com/SEU_GITHUB" target="_blank" class="hover:text-laranja-500 transition">GitHub</a>
-                    <a href="https://linkedin.com/in/SEU_LINKEDIN" target="_blank" class="hover:text-laranja-500 transition">LinkedIn</a>
-                </div>
-            </div>
-
-            <div>
-                <p class="font-semibold mb-2">Felipe</p>
-                <div class="flex justify-center gap-4 text-sm">
-                    <a href="https://github.com/SEU_GITHUB" target="_blank" class="hover:text-laranja-500 transition">GitHub</a>
+                    <a href="https://github.com/andreyjovemtech" target="_blank" class="hover:text-laranja-500 transition">GitHub</a>
                     <a href="https://linkedin.com/in/SEU_LINKEDIN" target="_blank" class="hover:text-laranja-500 transition">LinkedIn</a>
                 </div>
             </div>
