--- a/paginas/detalhes.html
+++ b/paginas/detalhes.html
@@ -18,12 +18,12 @@
             }
         }
     </script>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="/estilos.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 <body class="bg-gray-50 dark:bg-dark-900 text-gray-900 dark:text-gray-100 min-h-screen">
 
-    <a href="index.html" class="fixed top-6 left-6 z-50 p-3 bg-white/80 dark:bg-black/50 backdrop-blur-md rounded-full shadow-lg border border-white/20 hover:scale-105 transition-transform group">
+    <a href="/index.html" class="fixed top-6 left-6 z-50 p-3 bg-white/80 dark:bg-black/50 backdrop-blur-md rounded-full shadow-lg border border-white/20 hover:scale-105 transition-transform group">
         <svg class="w-6 h-6 text-gray-800 dark:text-white group-hover:-translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
     </a>
 
@@ -50,11 +50,11 @@
             const params = new URLSearchParams(window.location.search);
             const id = params.get('id');
 
-            if(!id) { window.location.href = 'index.html'; return; }
+            if(!id) { window.location.href = '/index.html'; return; }
 
             try {
                 // Ajustei o caminho do JSON para ser relativo
-                const resp = await fetch('estabelecimentos.json'); 
+                const resp = await fetch('/db/estabelecimentos.json'); 
                 const data = await resp.json();
                 const item = data.find(e => e.id === id);
 
@@ -68,7 +68,7 @@
                         <div class="text-6xl mb-4">😔</div>
                         <h2 class="text-2xl font-bold mb-2">Local Não Encontrado</h2>
                         <p class="text-gray-500 dark:text-gray-400">Verifique o link ou volte para a página inicial.</p>
-                        <a href="index.html" class="mt-6 px-6 py-3 bg-laranja-600 text-white font-bold rounded-full hover:bg-laranja-700 transition">Voltar</a>
+                        <a href="/index.html" class="mt-6 px-6 py-3 bg-laranja-600 text-white font-bold rounded-full hover:bg-laranja-700 transition">Voltar</a>
                     </div>
                 `;
             }
