--- a/paginas/sobre.html
+++ b/paginas/sobre.html
@@ -25,18 +25,18 @@
             }
         }
     </script>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="/estilos.css">
 </head>
 <body class="bg-orange-50/50 text-gray-900 dark:bg-dark-950 dark:text-gray-100 min-h-screen transition-colors duration-300">
 
 <header class="fixed top-0 w-full z-50 glass-panel border-b border-white/20">
     <div class="max-w-7xl mx-auto px-4 h-20 flex items-center justify-between">
-        <a href="index.html" class="flex items-center gap-3 hover:opacity-80 transition">
-            <img src="assets/imagens/logo2.png" alt="Sabor Sergipano" class="h-12 object-contain">
+        <a href="/index.html" class="flex items-center gap-3 hover:opacity-80 transition">
+            <img src="/assets/imagens/logo2.png" alt="Sabor Sergipano" class="h-12 object-contain">
         </a>
 
         <nav class="hidden md:flex gap-6 text-sm font-medium text-gray-600 dark:text-gray-300">
-            <a href="index.html" class="hover:text-laranja-600 transition font-bold">Início</a>
+            <a href="/index.html" class="hover:text-laranja-600 transition font-bold">Início</a>
             <a href="rotas.html" class="hover:text-laranja-600 transition font-bold">Rotas</a>
             <a href="agencias.html" class="hover:text-laranja-600 transition font-bold">Agências</a>
             <a href="sobre.html" class="hover:text-laranja-600 transition font-bold">Sobre</a>
@@ -64,7 +64,7 @@
 
     <div id="mobileMenu" class="hidden md:hidden bg-white/95 dark:bg-gray-900/95 backdrop-blur-xl border-t border-gray-200 dark:border-gray-800">
         <nav class="flex flex-col py-4 px-6 space-y-4 text-lg font-medium">
-            <a href="index.html" class="hover:text-laranja-600 transition py-2">Início</a>
+            <a href="/index.html" class="hover:text-laranja-600 transition py-2">Início</a>
             <a href="rotas.html" class="hover:text-laranja-600 transition py-2">Rotas</a>
             <a href="agencias.html" class="hover:text-laranja-600 transition py-2">Agências</a>
             <a href="sobre.html" class="hover:text-laranja-600 transition py-2">Sobre o Projeto</a>
@@ -132,26 +132,22 @@
             <h2 class="text-3xl font-bold mb-6 text-gray-800 dark:text-white">Squad</h2>
             <div class="flex flex-wrap justify-center gap-8">
                 <div class="text-center">
-                    <div class="w-24 h-24 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-3 flex items-center justify-center text-4xl">👨🏻</div>
+                    <div class="w-24 h-24 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-3 flex items-center justify-center text-4xl">👽</div>
                     <p class="font-bold text-gray-900 dark:text-white">Israel</p>
                 </div>
                 <div class="text-center">
-                    <div class="w-24 h-24 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-3 flex items-center justify-center text-4xl">👨🏽</div>
+                    <div class="w-24 h-24 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-3 flex items-center justify-center text-4xl">🫡</div>
                     <p class="font-bold text-gray-900 dark:text-white">Allan</p>
                 </div>
                 <div class="text-center">
-                    <div class="w-24 h-24 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-3 flex items-center justify-center text-4xl">👨🏾</div>
+                    <div class="w-24 h-24 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-3 flex items-center justify-center text-4xl">🤠</div>
                     <p class="font-bold text-gray-900 dark:text-white">Andrey</p>
-                </div>
-                <div class="text-center">
-                    <div class="w-24 h-24 bg-gray-200 dark:bg-gray-700 rounded-full mx-auto mb-3 flex items-center justify-center text-4xl">👨🏻</div>
-                    <p class="font-bold text-gray-900 dark:text-white">Felipe</p>
                 </div>
             </div>
         </div>
 
     </main>
-<footer class="bg-gradient-to-t from-gray-900 to-gray-800 dark:from-black dark:to-gray-900 text-white py-12 mt-20">
+<footer class="bg-gradient-to-t from-gray-900 to-gray-800 dark:from-black dark:to-gray-900 text-white py-12 mt-20 relative z-10">
     <div class="max-w-7xl mx-auto px-4 text-center">
         <h3 class="text-2xl font-bold mb-6 text-laranja-500">Equipe Sabor Sergipano</h3>
         <p class="text-gray-300 mb-8 max-w-2xl mx-auto">
@@ -159,19 +155,19 @@
             Professor: Edlange Lopes da Silva
         </p>
 
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-8 mb-10">
+        <div class="grid grid-cols-2 md:grid-cols-3 gap-8 mb-10">
             <div>
                 <p class="font-semibold mb-2">Israel</p>
                 <div class="flex justify-center gap-4 text-sm">
-                    <a href="https://github.com/SEU_GITHUB" target="_blank" class="hover:text-laranja-500 transition">GitHub</a>
-                    <a href="https://linkedin.com/in/SEU_LINKEDIN" target="_blank" class="hover:text-laranja-500 transition">LinkedIn</a>
+                    <a href="https://github.com/TioRael" target="_blank" class="hover:text-laranja-500 transition">GitHub</a>
+                    <a href="https://linkedin.com/in/israel-menezes-perfil" target="_blank" class="hover:text-laranja-500 transition">LinkedIn</a>
                 </div>
             </div>
 
             <div>
                 <p class="font-semibold mb-2">Allan</p>
                 <div class="flex justify-center gap-4 text-sm">
-                    <a href="https://github.com/SEU_GITHUB" target="_blank" class="hover:text-laranja-500 transition">GitHub</a>
+                    <a href="https://github.com/allnmaxmo" target="_blank" class="hover:text-laranja-500 transition">GitHub</a>
                     <a href="https://linkedin.com/in/SEU_LINKEDIN" target="_blank" class="hover:text-laranja-500 transition">LinkedIn</a>
                 </div>
             </div>
@@ -179,15 +175,7 @@
             <div>
                 <p class="font-semibold mb-2">Andrey</p>
                 <div class="flex justify-center gap-4 text-sm">
-                    <a href="https://github.com/SEU_GITHUB" target="_blank" class="hover:text-laranja-500 transition">GitHub</a>
-                    <a href="https://linkedin.com/in/SEU_LINKEDIN" target="_blank" class="hover:text-laranja-500 transition">LinkedIn</a>
-                </div>
-            </div>
-
-            <div>
-                <p class="font-semibold mb-2">Felipe</p>
-                <div class="flex justify-center gap-4 text-sm">
-                    <a href="https://github.com/SEU_GITHUB" target="_blank" class="hover:text-laranja-500 transition">GitHub</a>
+                    <a href="https://github.com/andreyjovemtech" target="_blank" class="hover:text-laranja-500 transition">GitHub</a>
                     <a href="https://linkedin.com/in/SEU_LINKEDIN" target="_blank" class="hover:text-laranja-500 transition">LinkedIn</a>
                 </div>
             </div>
